force-app/main/default/objects/RelatedEnterpriseRecords__c/RelatedEnterpriseRecords__c.object-meta.xml
<CustomObject>
    <description>Foreign Keys from ERP and other Enterprise Applications</description>
    <label>ERP Information</label>
    <nameField>
        <displayFormat>ERP-{000}</displayFormat>
        <label>ERP Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ERP Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>