force-app/main/default/objects/RelatedEnterpriseRecords__c/fields/Business__c.field-meta.xml
<CustomField>
    <fullName>Business__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business</label>
    <referenceTo>BusinessDetail__c</referenceTo>
    <relationshipName>Related_Enterprise_Records</relationshipName>
    <type>Lookup</type>
</CustomField>