force-app/main/default/objects/RelatedEnterpriseRecords__c/fields/ERP_Name__c.field-meta.xml
<CustomField>
    <fullName>ERP_Name__c</fullName>
    <label>ERP Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SAP TCC</fullName>
            </value>
            <value>
                <fullName>SAP TC1</fullName>
            </value>
            <value>
                <fullName>AForce</fullName>
            </value>
            <value>
                <fullName>Class</fullName>
            </value>
            <value>
                <fullName>CMMP</fullName>
            </value>
            <value>
                <fullName>Adage</fullName>
            </value>
            <value>
                <fullName>GEOS SAP</fullName>
            </value>
            <value>
                <fullName>CTS SAP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>