force-app/main/default/objects/RelatedEnterpriseRecords__c/fields/Foreign_Key__c.field-meta.xml
<CustomField>
    <fullName>Foreign_Key__c</fullName>
    <externalId>true</externalId>
    <label>Foreign Key</label>
    <length>30</length>
    <type>Text</type>
</CustomField>