force-app/main/default/objects/RelatedEnterpriseRecords__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Business__c</columns>
    <columns>Application__c</columns>
    <columns>Foreign_Key__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>